--- a/README
+++ b/README
@@ -36,6 +36,6 @@ library support was tested on.
 
 If you have any suggestions or bug reports, or you wish to port
 libtool to a new platform, please send electronic mail to the libtool
-mailing list <bug-libtool@gnu.ai.mit.edu>.  Don't forget to mention
-the version of libtool that you are currently using (by typing
-`ltconfig --version').
+mailing list <bug-libtool@gnu.org>.  Don't forget to mention the
+version of libtool that you are currently using (by typing `ltconfig
+--version').
