--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,7 @@
-NEWS - list of user-visible changes between releases of GNU libtool.
+NEWS - list of user-visible changes between releases of GNU Libtool
 
-New in 1.0f:
+New in 1.0f - 1997-11-08, Gordon Matzigkeit:
 * Bug fixes.
-* Portability fixes for Windows NT.
-* Maybe use `_libs' as a temporary libtool directory instead of `.libs'
-  in order to cope with MS-DOS filenames.
 * New `-all-static' flag to prevent any dynamic linking.  The regular
   `-static' flag now just prevents dynamic linking of libtool libraries.
 * The `-rpath' flag can be used to hardcode absolute directories when
@@ -21,17 +18,20 @@ New in 1.0f:
   flags.
 * New rules for AM_PROG_LD to use gcc's -print-prog-name flag in order
   to find ld, if possible.
-* Full support for broken collect2 on AIX 3.  Shared libraries
-  can now be built with all working versions of GCC.
 * Allow configure.in to change the defaults for AM_PROG_LIBTOOL's
   `--enable-shared' and `--enable-static' flags by setting
   the `enable_shared' or `enable_static' shell variables to `no'.
 * Refuse to create libtool libraries that don't begin with `lib'.
   This allows us to correctly handle OSes that don't have the `lib'
-  prefix by default.
+  prefix by default, such as OS/2.
+* Full support for broken collect2 on AIX 3.  Shared libraries
+  can now be built with all working versions of GCC on AIX.
+* Portability fixes for Windows NT.
+* Maybe use `_libs' as a temporary libtool directory instead of `.libs'
+  in order to cope with MS-DOS filenames.
 * Support for *-*-uts4* and *-*-os2*.
 
-New in 1.0:
+New in 1.0 - 1997-07-08, Gordon Matzigkeit:
 * Bug fixes.
 * Better configuration test to find the system linker.  The old test
   was failing because people frequently install GNU ld, but don't
@@ -51,13 +51,13 @@ New in 1.0:
 * Support *-*-linux-gnu* as an alias for *-*-linux*.
 * Support for *-*-openbsd* and *-*-freebsd3*.
 
-New in 0.9:
+New in 0.9 - 1997-02-03, Gordon Matzigkeit:
 * Bug fixes.
 * The libtool demo now uses the libm cos(3) function, to demonstrate
   inter-library dependencies.
 * The PLATFORMS file has been moved to doc/platforms.texi.
 
-New in 0.8:
+New in 0.8 - 1997-01-26, Gordon Matzigkeit:
 * Bug fixes, and more documentation.
 * Basic support for other language compilers (C++, Fortran, and
   preprocessed assembler).
@@ -70,7 +70,7 @@ New in 0.8:
   been rewritten to avoid ANSI-only constructs.
 * Support for *-*-irix5, *-*-irix6*, and *-*-sco3.2v5*.
 
-New in 0.7:
+New in 0.7 - 1996-12-08, Gordon Matzigkeit:
 * Total rewrite of libtool, along with a new model for library building.
 * Completely rewritten documentation for the new paradigm.
 * Sane handling of broken system linkers, such as the ones on AIX
