--- a/doc/platforms.texi
+++ b/doc/platforms.texi
@@ -4,34 +4,37 @@ canonical host name          compiler  libtool   results
 --------------------------------------------------------
 alpha-dec-osf3.2             cc        0.8       ok
 alpha-dec-osf3.2             gcc       0.8       ok
-alpha-dec-osf4.0             cc        0.9       ok
-alpha-dec-osf4.0             gcc       0.9       ok
+alpha-dec-osf4.0             cc        1.0f      ok
+alpha-dec-osf4.0             gcc       1.0f      ok
 alpha-unknown-linux          gcc       0.9h      ok
-hppa1.1-hp-hpux9.05          cc        0.8       ok
-hppa1.1-hp-hpux9.05          gcc       0.8       ok
+hppa1.1-hp-hpux9.07          cc        1.0f      ok
+hppa1.1-hp-hpux9.07          gcc       1.0f      ok
 hppa1.1-hp-hpux10.10         cc        0.9h      ok
 hppa1.1-hp-hpux10.10         gcc       0.9h      ok
 i386-unknown-freebsd2.1.5    gcc       0.5       ok
 i386-unknown-gnu0.0          gcc       0.5       ok
 i386-unknown-netbsd1.2       gcc       0.9g      ok
 i586-pc-linux-gnu1.3.20      gcc       1.0       ok
-i586-pc-linux-gnu2.0.16      gcc       1.0a      ok
+i586-pc-linux-gnu2.0.30      gcc       1.0f      ok
 mips-sgi-irix5.3             cc        0.8       ok
 mips-sgi-irix5.3             gcc       0.8       ok
 mips-sgi-irix6.2             cc -32    0.9       ok
 mips-sgi-irix6.2             cc -n32   0.9       ok
+mips-sgi-irix6.3             cc        1.0f      ok
+mips-sgi-irix6.3             irix5-gcc 1.0f      ok
 mipsel-unknown-openbsd2.1    gcc       1.0       ok
-powerpc-ibm-aix4.1.4.0       xlc       1.0       ok
+powerpc-ibm-aix4.1.4.0       xlc       1.0f      ok
 powerpc-ibm-aix4.1.4.0       gcc       1.0       ok
 rs6000-ibm-aix3.2.5          xlc       1.0a      ok
 rs6000-ibm-aix3.2.5          gcc       1.0a      ok*
 sparc-sun-linux2.1.23        gcc       0.9h      ok
-sparc-sun-sunos4.1.4         cc        1.0       ok
-sparc-sun-sunos4.1.4         gcc       1.0       ok
+sparc-sun-sunos4.1.3         gcc       1.0f      ok
+sparc-sun-sunos4.1.4         cc        1.0f      ok
+sparc-sun-sunos4.1.4         gcc       1.0f      ok
 sparc-sun-solaris2.4         cc        1.0a      ok
 sparc-sun-solaris2.4         gcc       1.0a      ok
-sparc-sun-solaris2.5         cc        1.0a      ok
-sparc-sun-solaris2.5         gcc       1.0a      ok
+sparc-sun-solaris2.5         cc        1.0f      ok
+sparc-sun-solaris2.5         gcc       1.0f      ok
 --------------------------------------------------------
 
 * Some versions of GCC's collect2 linker program cannot link trivial
