--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.0x - 1997-XX-XX, Gordon Matzigkeit:
+* Bug fixes.
+
 New in 1.0f - 1997-11-08, Gordon Matzigkeit:
 * Bug fixes.
 * New `-all-static' flag to prevent any dynamic linking.  The regular
