--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,31 @@
+Thu Nov 27 08:53:05 1997  Gordon Matzigkeit  <gord@gnu.org>
+
+	* ltconfig.in, ltmain.in (global_symbol_pipe): Explicitly cast all
+	addresses to __ptr_t.  This fixes a bug due to a strict IRIX
+	compiler.  Suggested by Kaveh R. Ghazi.
+
+Sun Nov 23 09:29:58 1997  Gordon Matzigkeit  <gord@gnu.org>
+
+	* ltmain.in (echo): For aesthetics, avoid using `$echo' when
+ 	`echo' will do *exactly* the same thing.  This prevents ugly
+ 	`printf %s\n timestamp > some.lo' commands from appearing in the
+ 	libtool output.
+	(link): Delete the `-allow-undefined' flag because it is now the
+ 	default.  Make `-no-undefined' in order for people to declare that
+ 	a library is entirely self-contained.  This prevents maintainers
+ 	from accidentally creating shared libraries that won't work on
+ 	AIX.  Reported by Stefan Westerfield and Danny Backx.
+
+	* ltconfig.in (echo): Use an echo variable, just as in ltmain.in,
+	because we need it for quoting substitutions.  For most of the
+	script, though, use the default echo, just like Autoconf does.
+	Without this patch, character \001 ends up in global_symbol_pipe.
+	Reported by Lars Hecking and Jürgen Fluk.
+
+	* ltmain.in (echo): Set default to `echo=echo'.  Ooops.  That's
+	what you get for testing obscure code paths and forgetting to
+	revert to the original version.  Reported by Danny Backx.
+
 Fri Nov 14 10:44:07 1997  Gordon Matzigkeit  <gord@gnu.org>
 
 	* ltconfig.in (hardcode_libdir_flag_spec): Set to `-R' for FreeBSD
@@ -5,6 +33,8 @@ Fri Nov 14 10:44:07 1997  Gordon Matzigkeit  <gord@gnu.org>
 	(postuninstall_cmds, old_postuninstall_cmds): Commands to run
  	after uninstall mode deletes the libraries.  Suggested by Joop van
 	de Wege.
+	(export_dynamic_flag_spec): On HP-UX, add the `${wl}-E'
+	export_dynamic_flag_spec.  Reported by Matthias Hoelzer.
 
 Tue Nov 11 15:05:58 1997  Gordon Matzigkeit  <gord@gnu.org>
 
