--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ NEWS - list of user-visible changes between releases of GNU Libtool
 
 New in 1.0x - 1997-XX-XX, Gordon Matzigkeit:
 * Bug fixes.
+* Support for *-*-amigaos*.
 
 New in 1.0f - 1997-11-08, Gordon Matzigkeit:
 * Bug fixes.
