--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.0h - 1997-12-01, Gordon Matzigkeit:
+* A fix for an insidious bug in the quoting code, which broke
+  everything on almost all platforms.
+
 New in 1.0g - 1997-11-29, Gordon Matzigkeit:
 * Bug fixes.
 * `-allow-undefined' is now the default.  You can use `-no-undefined'
